--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>{{ title }} - Console</title>
-		<link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
+		<link href="/static/css/bootstrap.min.css?q=123456" rel="stylesheet" media="screen">
 		<script src="/static/js/bootstrap.min.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
