--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -1,12 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
     <div container="container">
-    <div class="alert alert-info">Logged in as <strong>{{ user.username }}</strong>. <a class="btn btn-danger btn-small" href="{{ url_for('logout') }}">Logout</a></div>
     <div class="panel-group">
   		{% for setting in settings %}
         <div class="panel panel-info">
           <div class="panel-heading"><strong>{{ setting.name }}</strong></div>
-          <div class="panel-body cener-block">
+          <div class="panel-body center-block">
             <form action="#" method="post" name="{{ setting.name }}">
               {{ setting.form.hidden_tag() }}
               {% if setting.form.password is defined %}
