--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,24 +8,27 @@
 	<div class="jumbotron">
 		<h1>Welcome to the Console!</h1>
 		<p>This console is a web based access point from which an administrator may view and edit various attributes of the card readers in this system, and the personnel who use the card readers.</p>
-    <div class="row">
-      <div class="col-sm-4"></div>
-      <div class="col-sm-4 rounded">
+    <div class="panel panel-info center-block" style="width:360px">
+      <div class="panel-heading"><strong>Sign In</strong></div>
+      <div class="panel-body">
   		  <form action="#" method="post" name="login">
   			{{ form.hidden_tag() }}
           <div class="text-center">
-        		<p>Please enter your username:<br>
-            		{{ form.username(size=28) }}<br>
-        		</p>
-        		<p>And your password:<br>
-        			{{ form.password(size=28) }}<br>
-        		</p>
-        		<p>{{ form.remember_me }} Remember Me</p>
-        		<p><input type="submit" value="Sign In"></p>
+            <div class="form-group">
+              <label>{{ form.username.label }}: </label>
+            	{{ form.username(size=28) }}
+            </div>
+            <div class="form-group">
+              <label>{{ form.password.label }}: </label>
+              {{ form.password(size=28) }}
+            </div>
+            <div class="form-group">
+              {{ form.remember_me.label }}: {{ form.remember_me }}
+            </div>
+        		<button type="submit" class="btn btn-primary">Sign In</button>
           </div>
     		</form>
       </div>
-      <div class="col-sm-4"></div>
     </div>
   </div>
 {% endblock %}
