--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
 		<h1>Welcome to the Console!</h1>
 		<p>This console is a web based access point from which an administrator may view and edit various attributes of the card readers in this system, and the personnel who use the card readers.</p>
     <div class="panel panel-info center-block" style="width:360px">
-      <div class="panel-heading"><strong>Sign In</strong></div>
+      <div class="panel-heading text-center"><strong>Sign In</strong></div>
       <div class="panel-body">
   		  <form action="#" method="post" name="login">
   			{{ form.hidden_tag() }}
