--- a/app/templates/reception.html
+++ b/app/templates/reception.html
@@ -3,6 +3,9 @@
 	<script type="text/javascript">
 		$(document).ready(function()
 		{
+			{% if promptChooseReader %}
+			$("#changeReader").modal("show");
+			{% endif %}
 			$("#usermodal").css("height:400px");
 			$(".userrow").click(function(){
 				selectedUserID = $(this).find('.userid');
@@ -18,6 +21,68 @@
 		    	var dateTime = document.getElementById("datetime");
 		    	dateTime.innerHTML = date.toDateString() + " - " + date.toTimeString();
 		    }
+		    updateLog();
+		    window.setInterval(updateLog, 1000);
+		    function updateLog(){
+		    	$.ajax({
+		    		url: "/receptionUpdateLog",
+		    		type: "GET",
+		    		success: function(response) {
+		    			var log = document.getElementById("log");
+		    			
+		    			var logArray = JSON.parse(response).log;
+		    			var newTableHTML = "";
+		    			var i;
+		    			for(i = 0; i < logArray.length; i++){
+		    				time = new Date(logArray[i].time);
+		    				timeString = ("0" + time.getMonth()).slice(-2);
+		    				timeString += "/" + ("0" + time.getDate()).slice(-2);
+		    				timeString += "/" + time.getFullYear();
+
+		    				timeString += " - " + ("0" + time.getHours()).slice(-2) % 12;
+		    				timeString += ":" + ("0" + time.getMinutes()).slice(-2);
+		    				var ampm = time.getHours() >= 12 ? 'pm' : 'am';
+		    				timeString += " " + ampm;
+
+		    				newTableHTML += "<tr><td>" + logArray[i].username;
+		    				newTableHTML += "</td><td>"+ timeString + "</td></tr>";
+		    			}
+		    			log.innerHTML = newTableHTML;
+
+		    			console.log(response);
+		    		},
+		    		error: function(error) {
+		    			console.log(error);
+		    		}
+		    	});
+		    }
+
+		    $(".changeReaderButton").click(function() {
+		       	$.ajax({
+		            url: "/receptionChangeCurrentReader",
+		            data: {"readerID": this.id},
+		            type: "POST",
+		            success: function(response) {
+		            	var changeReaderButtons = document.getElementsByClassName("changeReaderButton");
+		            	var readerID = JSON.parse(response).readerID;
+		            	var i;
+		            	for(i = 0; i < changeReaderButtons.length; i++){
+		            		$(changeReaderButtons[i]).removeClass("btn-success").removeClass("btn-primary");
+		            		console.log("id " + readerID + " and " + changeReaderButtons[i].id);
+		            		if(readerID == changeReaderButtons[i].id){
+		            			$(changeReaderButtons[i]).addClass("btn-success");
+		            		}else{
+								$(changeReaderButtons[i]).addClass("btn-primary");
+		            		}
+		            	}
+		                console.log(response);
+		                window.setTimeout(function(){location.reload()},500)
+		            },
+		            error: function(error) {
+		                console.log(error);
+		            }
+		        });
+		    });
 		});
 	</script>
 	<div id="changeReader" class="modal fade" role="dialog">
@@ -40,9 +105,9 @@
 				            <tr>
 				            	<td>
 				            	{% if loop.index0 == currentReader %}
-				            		<button type="button" class="btn btn-success btn-block">{{ reader.name }}</button>
+				            		<button type="button" class="btn btn-success btn-block changeReaderButton" id="{{ reader.id }}">{{ reader.name }}</button>
 				            	{% else %}
-				            		<button type="button" class="btn btn-primary btn-block">{{ reader.name }}</button>
+				            		<button type="button" class="btn btn-primary btn-block changeReaderButton" id="{{ reader.id }}">{{ reader.name }}</button>
 			            		{% endif %}
 			            		</td>
 			            		{% if reader.status == 0 %}
@@ -63,54 +128,74 @@
     		</div>
     	</div>
 	</div>
-	<div class="panel-group">
-		{% if user.access == 4 or user.access == 99 %}
-		<div class="panel panel-info">
-	        <div class="panel-heading text-center"><h2>Reception Desk</h2></div>
-	        <div class="panel-body text-center">
-        		<h2 id="datetime"></h2>
-	        	Current card reader: <strong>{{ readers[currentReader].name }}</strong><br><br>
-				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#changeReader">Change Card Reader</a>
-	  		</div>
-	  	</div>
-		<div class="panel panel-info">
-	        <div class="panel-heading text-center"><strong>Add/Remove Guests</strong></div>
-	        <div class="panel-body text-center">
-				<form action="#" method="post" name="guestlogin" class="form-inline">
-	  				{{ createGuestForm.hidden_tag() }}
-	  				<div class="form-group">
-	  					<label>{{ createGuestForm.username.label }}: </label>
-	            	 	{{ createGuestForm.username(size=28) }}
-	            	</div>
- 	  				<div class="form-group">
-	  					<label>{{ createGuestForm.expires.label }}: </label>
-						{{ createGuestForm.expires }}
-					</div>
-	        		<button type="submit" class="btn btn-primary">Create Guest</button>
-    			</form>
+	<div class="col-md-8">
+		<div class="panel-group">
+			{% if user.access == 4 or user.access == 99 %}
+			<div class="panel panel-info">
+		        <div class="panel-heading text-center"><h2>Reception Desk</h2></div>
+		        <div class="panel-body text-center">
+	        		<h2 id="datetime"></h2>
+		        	Current card reader: <strong>{{ readers[currentReader].name }}</strong><br><br>
+					<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#changeReader">Change Card Reader</a>
+		  		</div>
+		  	</div>
+			<div class="panel panel-info">
+		        <div class="panel-heading text-center"><strong>Add/Remove Guests</strong></div>
+		        <div class="panel-body text-center">
+					<form action="#" method="post" name="guestlogin" class="form-inline">
+		  				{{ createGuestForm.hidden_tag() }}
+		  				<div class="form-group">
+		  					<label>{{ createGuestForm.username.label }}: </label>
+		            	 	{{ createGuestForm.username(size=28) }}
+		            	</div>
+	 	  				<div class="form-group">
+		  					<label>{{ createGuestForm.expires.label }}: </label>
+							{{ createGuestForm.expires }}
+						</div>
+		        		<button type="submit" class="btn btn-primary">Create Guest</button>
+	    			</form>
+				</div>
 			</div>
-		</div>
-		<div class="panel panel-info">
-	        <div class="panel-heading text-center"><strong>Manual Check In</strong></div>
-	        <div class="panel-body text-center">
-				<form action="#" method="post" name="checkin">
-	  				{{ manualCheckInForm.hidden_tag() }}
-	  				<div class="form-group">
-	  					<label>{{ manualCheckInForm.username.label }}: </label><br>
-	  					{{ manualCheckInForm.username(size=28) }}
-	  				</div>
-	  				<div class="form-group">
-	  					<label>{{ manualCheckInForm.facid.label }}: </label><br>
-	  					{{ manualCheckInForm.facid }}
-	  				</div>
-	  				<div class="form-group">
-	  					<label>{{ manualCheckInForm.cardid.label }}: </label><br>
-	  					{{ manualCheckInForm.cardid }}
-	  				</div>
-	  				<button type="submit" class="btn btn-primary">Check In</button>
-    			</form>
+			<div class="panel panel-info">
+		        <div class="panel-heading text-center"><strong>Manual Check In</strong></div>
+		        <div class="panel-body text-center">
+					<form action="#" method="post" name="checkin">
+		  				{{ manualCheckInForm.hidden_tag() }}
+		  				<div class="col-md-4 form-group">
+		  					<label>{{ manualCheckInForm.username.label }}: </label><br>
+		  					{{ manualCheckInForm.username(size=28) }}
+		  				</div>
+		  				<div class="col-md-4 form-group">
+		  					<label>{{ manualCheckInForm.facid.label }}: </label><br>
+		  					{{ manualCheckInForm.facid(size=28) }}
+		  				</div>
+		  				<div class="col-md-4 form-group">
+		  					<label>{{ manualCheckInForm.cardid.label }}: </label><br>
+		  					{{ manualCheckInForm.cardid(size=28) }}
+		  				</div>
+		  				<div class="col-md-4"></div>
+		  				<button type="submit" class="btn btn-primary col-md-4">Check In</button>
+	    			</form>
+				</div>
 			</div>
+			{% endif %}
 		</div>
-		{% endif %}
 	</div>
+	<div class="col-md-4">
+		<div class="panel panel-info">
+			<div class="panel-heading text-center"><h2>Card Log</h2></div>
+	        <div class="panel-body text-center">
+	        	<table class="table">
+			        <thead>
+			        	<tr>
+			        		<th>User</th>
+			        		<th>Time</th>
+			        	</tr>
+			        </thead>
+			        <tbody id="log">
+						
+			        </tbody>
+	        </div>
+        </div>
+    </div>
 {% endblock %}
