--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -3,14 +3,7 @@
 	<script type="text/javascript">
 	$(document).ready(function()
 	{
-		$("#usermodal").css("height:400px");
-		$(".userrow").click(function(){
-			selectedUserID = $(this).find('.userid');
-			$("#usermodal").show();
-		});
-		function closeModal(){
-			$("#usermodal").hide();
-		}
+		
 	});
 	</script>
 	<div class="panel-group">
@@ -23,6 +16,31 @@
 	  		</div>
 	  	</div>
   		{% endif %}
+  		<div class="panel panel-info">
+		    <div class="panel-heading"><strong>Add User</strong></div>
+			<div class="panel-body text-center">
+				<form action="#" method="post" name="CreateUser">
+             	{{ createUserForm.hidden_tag() }}
+                  	<div class="form-group col-md-4">
+                    	<label>{{ createUserForm.username.label }}</label><br>
+                    	{{ createUserForm.username(size=28) }}
+                  	</div>
+                  	<div class="form-group col-md-4">
+                    	<label>{{ createUserForm.password.label }}</label><br>
+                    	{{ createUserForm.password(size=28) }}
+                  	</div>
+                  	<div class="form-group col-md-4">
+                    	<label>{{ createUserForm.confirm.label }}</label><br>
+                    	{{ createUserForm.confirm(size=28) }}
+                  	</div>
+                  	<div class="form-group">
+                    	<label>{{ createUserForm.access.label }}</label><br>
+                    	{{ createUserForm.access }}
+                  	</div>
+              		<button type="submit" class="btn btn-primary">Create User</button>
+            	</form>
+			</div>
+		</div>
   		<div class="panel panel-info">
 	        <div class="panel-heading"><strong>User Database</strong></div>
 	        <div class="panel-body">
