Choose Authorized Users Dialog Complete
Fixed the choose authorized users dialog for a given reader. It now
allows selection, sends an ajax request to the server, updates the DB,
and then repopulates the relevant reader table entry with the new user
list.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>{{ title }} - Console</title>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+		<script src="/static/js/jquery.min.js"></script>
 		<link href="/static/css/bootstrap.min.css?q=123456" rel="stylesheet" media="screen">
 		<script src="/static/js/bootstrap.min.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
