--- a/app/templates/readers.html
+++ b/app/templates/readers.html
@@ -1,86 +1,169 @@
 {% extends "base.html" %}
 {% block content %}
 	<script type="text/javascript">
-		$(function() {
-		    $(".enable").click(function() {
-		       	$.ajax({
-		            url: "/readerEnable",
-		            data: {"readerID": this.id},
-		            type: "POST",
-		            dataType: "json",
-		            success: function(response) {
-		                window.alert(response);
-		                console.log(response);
-		            },
-		            error: function(error) {
-		                console.log(error);
-		            }
-		        });
-		    });
-		});
-
 		// if it is necessary to use user.id not as an index into the array, 
 		// we need to search through this users[] array and find a matching user.id (add into the JSON.parse statement then)
 		// for now, (user.id - 1) works as an index
+
 		var users = [];
-		{% for user in users %}
-		var user{{ loop.index0 }} = JSON.parse('{"username": "{{ user.username }}"}');
-		users.push(user{{ loop.index0 }});
-		{% endfor %}
-
 		var readers = [];
-		{% for reader in readers %}
-		var readerArray{{ loop.index0 }} = {{ reader.users|tojson }};
-		readers.push(JSON.parse(readerArray{{ loop.index0 }}));
-		{% endfor %}
+		var statuses = [];
+		var currentReader = -1;	// this will be set by showChangeUserList() before it used in toggleUserList
 
-		var currentReader = -1;	// this will be set by changeUserList() before it used in toggleUserList
-		
-		// programatically transfer user template array to a list of push statements
-		// for use in javascript.
+		function getReaders(){
+			$.get({
+				url: "/getReaders",
+				dataType: "json",
+				data: "nonsense",
+				success: function(response){
+					readers = response;
+					for(var i = 0; i < readers.length; i++){
+						readers[i]["users"] = JSON.parse(readers[i]["users"]); 
+						// convert "users" string field to an array for javascript
+					}
+				}
+			});
+		}
 
-		// do template creation of user list modal
-		// use javascript for elements by classname to change button from primary to success
-		// use as a select-list input, ajax to communicate to server
+		function getReadersStatus(){
+			$.get({
+				url: "/getReaders",
+				dataType: "json",
+				success: function(response){
+					statuses = [];					
+					for(var i = 0; i < response.length; i++){
+						statuses.push(response[i]["status"]);
+					}
+				}
+			});
+		}
 
 		$(document).ready(function() {
-			$("#changeUserListModal").modal("show");
+			$.get({
+				url: "/getUsers",
+				dataType: "json",
+				success: function(response){
+					users = response;
+				}
+			});
+			getReaders();
 		});
+
+		window.setInterval(updateReaderTable, 1000);
+		function updateReaderTable(){
+			getReadersStatus();
+			var statusLabels = document.getElementsByClassName("status");
+
+			for(var i = 0; i < statusLabels.length; i++){
+				var statusLabel = statusLabels[i];
+				var status = statuses[statusLabel.id - 1];
+
+				if(status == 0){
+					$(statusLabel).css("color", "gray");
+					statusLabel.innerHTML = "Inactive";
+					$(statusLabel).removeClass("flash250");
+				}else if(status == 1){
+					$(statusLabel).css("color", "green");
+					statusLabel.innerHTML = "Active";
+					$(statusLabel).removeClass("flash250");
+				}else{
+					$(statusLabel).css("color", "#ff0000");
+					statusLabel.innerHTML = "TAMPER";
+					$(statusLabel).addClass("flash250");
+				}
+			}
+			/*var readerListTable = document.getElementById("readerList");
+			var newHTML = "";
+			for(var i = 0; i < readers.length; i++){
+				var reader = readers[i];
+				newHTML += '<tr><td style="width:10%">';
+				newHTML += reader["name"] + '</td>';
+				if(reader["status"] == 0){
+					newHTML += '<td style="color:gray">Inactive</td>';
+				}else if(reader["status"] == 1){
+					newHTML += '<td style="color:green">Active</td>';
+				}else{
+					newHTML += '<td style="color:#ff0000" class="flash250">TAMPER</td>';
+				}
+				newHTML += '<td class="readerUserList" id="' + reader["id"] + '">';
+				for(var j = 0; j < reader["users"].length; j++){
+					for(var k = 0; k < users.length; k++){
+						if(users[k]["id"] == reader["users"][j]){
+							newHTML += users[k]["username"] + ', ';
+						}
+					}
+				}
+				newHTML += '</td><td style="width:20%"><button class="btn btn-primary enable">Enable</button><button class="btn btn-primary changeUserList" onclick="showChangeUserList(' + reader["id"] + ')">User Auth List</button></td>';
+				newHTML += '</tr>';
+			}
+			readerListTable.innerHTML = newHTML;*/
+
+
+		}
+
+		function getUserByID(id){
+			for(var i = 0; i < users.length; i++){
+				if(users[i].id == id)
+					return users[i];
+			}
+			return null;
+		}
+
+		function readerEnable(id){
+			$.ajax({
+				url: "/readerEnable",
+				data: JSON.stringify({"readerID": id}),
+				type: "POST",
+				dataType: "json",
+				contentType: "application/json",
+				success: function(response){
+					if(response["status"] != "OK"){
+						window.alert("Error, could not enable reader. ");
+					}
+				}
+			})
+		}
 
 		function saveUserListChanges(){
 			$.ajax({
 	            url: "/readerChangeUserList",
-	            data: JSON.stringify({"readerID": currentReader + 1, "readerUserList": readers[currentReader]}),
+	            data: JSON.stringify({"readerID": currentReader + 1, "readerUserList": readers[currentReader]["users"]}),
 	            type: "POST",
 	            dataType: "json",
 	            contentType: "application/json",
 	            success: function(response){
-	            	var readerUserLists = document.getElementsByClassName("readerUserList");
-	            	var readerUserListString = response["readerUserList"];
-	            	console.log("RULS: " + readerUserListString);
-	            	var readerUserListArray = JSON.parse(readerUserListString);
+	            	if(response["status"] == "OK"){
+		            	var readerUserLists = document.getElementsByClassName("readerUserList");
+		            	var readerUserListString = response["readerUserList"];
+		            	var readerUserListArray = JSON.parse(readerUserListString);
+		            	console.log(readerUserListString);
 
-	            	for(var i = 0; i < readerUserLists.length; i++){
-	            		if(readerUserLists[i].id == currentReader + 1){
-	            			readerUserLists[i].innerHTML = "";
-	            			for(var j = 0; j < readerUserListArray.length; j++){
-	            				var user = users[parseInt(readerUserListArray[j] - 1)];
-	            				readerUserLists[i].innerHTML += (user.username + ", ");
-	            			}
-	            			break;
-	            		}
+		            	for(var i = 0; i < readerUserLists.length; i++){
+		            		if(readerUserLists[i].id == currentReader + 1){
+		            			readerUserLists[i].innerHTML = "";
+		            			for(var j = 0; j < readerUserListArray.length; j++){
+		            				var user = users[parseInt(readerUserListArray[j] - 1)];
+		            				readerUserLists[i].innerHTML += (user.username + ", ");
+		            			}
+		            			break;
+		            		}
+		            	}
+		            	
+		            	$("#changeUserListDialog").modal("hide");
+		                console.log(response);
+	            	}else{
+	            		window.alert("Error, could not save changes to user list. Please try again.");
 	            	}
-	            	//var reader = JSON.parse(response);
-	                console.log(response);
 	            },
 	            error: function(error){
+            		window.alert("Error, could not save changes to user list. Please try again.");
 	                console.log(error);
 	            }
 		    });
 		}
 
 		function toggleUserList(userID){
-			var readerUserList = readers[currentReader];
+			var readerUserList = readers[currentReader]["users"];
 			var toggleUserIDoneindexed = userID;
 
 			var userExistsInList = false;
@@ -101,19 +184,17 @@
 
 			console.log(JSON.stringify(readerUserList))
 
-			readers[currentReader] = readerUserList;
-			changeUserList(currentReader + 1);
+			readers[currentReader]["users"] = readerUserList;
+			showChangeUserList(currentReader + 1); // convert from index to readerID by adding one
 		}
 
-
-		function changeUserList(readerID){
-			currentReader = readerID - 1; // minus one because ID's are 1-indexed, not zero-indexed
+		function updateUserListButtons(){
 			var userListTable = document.getElementById("changeUserListTable");
-			var readerUserList = readers[currentReader];	
+			var readerUserList = readers[currentReader]["users"];	
 
 			var userListButtons = document.getElementsByClassName("userListButton");
 			for(var i = 0; i < userListButtons.length; i++){
-				var user = users[i];
+				var user = getUserByID(userListButtons[i].id);
 				var userAuthorized = false;
 				$(userListButtons[i]).removeClass("btn-danger").removeClass("btn-success");
 				for(var j = 0; j < readerUserList.length; j++){
@@ -129,11 +210,14 @@
 					userListButtons[i].innerHTML = "Unauthorized";
 				}
 			}
+		}
 
+		function showChangeUserList(readerID){
+			currentReader = readerID - 1; // minus one because ID's are 1-indexed, not zero-indexed
+			updateUserListButtons();
 			var userListDialog = document.getElementById("changeUserListDialog");
 			$("#changeUserListDialog").modal("show");
 		}
-<<<<<<< HEAD
 
 		function authorizeAll(authorize){
 			var accessButtons = document.getElementsByClassName("accessButton");
@@ -176,6 +260,8 @@
 				}
 			}
 
+			console.log(JSON.stringify(readerUserList))
+
 			readers[currentReader]["users"] = readerUserList;
 			updateUserListButtons();
 		}
@@ -191,18 +277,21 @@
 		
 		}
 
-=======
->>>>>>> parent of 8030dd7... User Authorization Dialog Additions
 	</script>
 	<div id="changeUserListDialog" class="modal fade" role="dialog">
-      	<div class="modal-dialog">
+		{% if accessLevels|length <= 6 %}
+      	<div class="modal-dialog" style="width: 40vw">
+		{% elif accessLevels|length > 6 and accessLevels|length <= 8 %}
+      	<div class="modal-dialog" style="width: 60vw">
+		{% else %}
+      	<div class="modal-dialog" style="width: 80vw">
+      	{% endif %}
 	        <div class="modal-content">
-	          	<div class="modal-header">
+	          	<div class="modal-header text-center">
 	            	<button type="button" class="close" data-dismiss="modal">&times;</button>
 	            	<h4 class="modal-title">Change User Authorization List</h4>
 	        	</div>
 		        <div class="modal-body">
-<<<<<<< HEAD
 		        	<div class="panel panel-default">
 				        <div class="panel-heading text-center"><strong>Authorize Access Levels</strong></div>
 				        <div class="panel-body">
@@ -263,36 +352,37 @@
 							<button class="btn btn-success">Authorize</button>
 				        </div>
 			        </div>
-			        <div class="btn-group btn-group-justified">
-	        			<div class="btn-group">
-							<button class="btn btn-success" onclick="saveUserListChanges()">Save Changes</button>
-						</div>
-						<div class="btn-group">
-							<button class="btn btn-danger" data-dismiss="modal">Close</button>
-						</div>
-					</div><br>
 			        <table class="table table-striped table-bordered">
-=======
-			        <table class="table table-striped">
->>>>>>> parent of 8030dd7... User Authorization Dialog Additions
 				        <thead>
 				        	<tr>
-				        		<th>Username</th>
-				        		<th>Authorized</th>
+				        		<th class="text-center">Username</th>
+				        		<th class="text-center">Access Level</th>
+				        		<th class="text-center">Authorization</th>
 				        	</tr>
 				        </thead>
 				        <tbody id="changeUserListTable">
 				        {% for user in users %}
 							<tr>
-								<td>{{ user.username }}</td>
-								<td class="text-center"><button class="btn btn-danger userListButton" onclick="toggleUserList({{ user.id }})">Unauthorized</button></td>
+								<td style="width:40%" class="text-center">{{ user.username }}</td>
+								<td style="width:20%" class="text-center">
+								{% if user.access == 99 %}
+									<strong>Admin</strong>
+								{% else %}
+									{% for level in accessLevels %}
+										{% if loop.index0 == user.access %}
+											{{ level }}
+										{% endif %}
+									{% endfor %}
+								{% endif %}
+								</td>
+								<td style="width:40%" class="text-center"><button class="btn btn-danger btn-block userListButton" onclick="toggleUserList({{ user.id }})">Unauthorized</button></td>
 							</tr>
 				        {% endfor %}
 	            		</tbody>
 	        		</table>
 		        </div>
 		        <div class="modal-footer">
-			        <button type="button" class="btn btn-success" onclick="saveUserListChanges()" data-dismiss="modal">Save Changes</button>
+			        <button type="button" class="btn btn-success" onclick="saveUserListChanges()">Save Changes</button>
 		            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
 		        </div>
     		</div>
@@ -304,7 +394,7 @@
 	        <div class="panel-heading"><strong>Create and Edit Card Readers</strong></div>
 	        <div class="panel-body">
 				<p>You are logged in as a user with <strong>Admin</strong> access level. View User and Reader database by clicking this link: </p>
-				<a href="admin/user" class="btn btn-success">Admin Database Access</a>
+				<a href="admin/reader" class="btn btn-success">Admin Database Access</a>
 	  		</div>
 	  	</div>
 		<div class="panel panel-info">
@@ -316,20 +406,19 @@
 							<th>Name</th>
 							<th>Status</th>
 							<th>Users</th>
-							<th>Active Time Period</th>
 							<th>Actions</th>
 						</tr>
 					</thead>
-					<tbody>
+					<tbody id="readerList">
 					{% for reader in readers %}
 						<tr>
 							<td style="width:10%">{{ reader.name }}</td>
 							{% if reader.status == 0 %}
-							<td style="color:gray">Inactive</td>
+							<td style="color:gray" class="status" id={{reader.id}}>Inactive</td>
 							{% elif reader.status == 1 %}
-							<td style="color:green">Active</td>
+							<td style="color:green" class="status" id={{reader.id}}>Active</td>
 							{% else %}
-							<td style="color:#ff0000" class="flash250">TAMPER</td>
+							<td style="color:#ff0000" class="status flash250" id={{reader.id}}>TAMPER</td>
 							{% endif %}
 							<td class="readerUserList" id="{{ reader.id }}">
 							{% for readeruser in reader.users %}
@@ -340,10 +429,9 @@
 								{% endfor %}
 							{% endfor %}
 							</td>
-							<td>{{ reader.starttime }} - {{ reader.endtime}}</td>
 							<td style="width:20%">
-								<button class="btn btn-primary enable">Enable</button>
-								<button class="btn btn-primary changeUserList" onclick="changeUserList({{ reader.id }})">User Auth List</button>
+								<button class="btn btn-primary enable" onclick="readerEnable({{ reader.id }})">Enable</button>
+								<button class="btn btn-primary changeUserList" onclick="showChangeUserList({{ reader.id }})">User Auth List</button>
 							</td>
 						</tr>
 					{% endfor %}
