--- a/app/templates/reception.html
+++ b/app/templates/reception.html
@@ -6,14 +6,7 @@
 			{% if promptChooseReader %}
 			$("#changeReader").modal("show");
 			{% endif %}
-			$("#usermodal").css("height:400px");
-			$(".userrow").click(function(){
-				selectedUserID = $(this).find('.userid');
-				$("#usermodal").show();
-			});
-			function closeModal(){
-				$("#usermodal").hide();
-			}
+			
 			updateTime();
 			window.setInterval(updateTime, 1000);
 		    function updateTime(){
@@ -27,10 +20,10 @@
 		    	$.ajax({
 		    		url: "/receptionUpdateLog",
 		    		type: "GET",
+		    		dataType: "json",
 		    		success: function(response) {
 		    			var log = document.getElementById("log");
-		    			
-		    			var logArray = JSON.parse(response).log;
+		    			var logArray = response["log"];
 		    			var newTableHTML = "";
 		    			var i;
 		    			for(i = 0; i < logArray.length; i++){
@@ -89,7 +82,7 @@
       	<div class="modal-dialog">
 	        <div class="modal-content">
 	          	<div class="modal-header">
-	            	<button type="button" class="close" data-dismiss="modal">&times;</button>
+		          	<button type="button" class="close" data-dismiss="modal">&times;</button>
 	            	<h4 class="modal-title">Change Card Reader</h4>
 	        	</div>
 		        <div class="modal-body">
@@ -164,10 +157,6 @@
 		  				<div class="col-md-4 form-group">
 		  					<label>{{ manualCheckInForm.username.label }}: </label><br>
 		  					{{ manualCheckInForm.username(size=28) }}
-		  				</div>
-		  				<div class="col-md-4 form-group">
-		  					<label>{{ manualCheckInForm.facid.label }}: </label><br>
-		  					{{ manualCheckInForm.facid(size=28) }}
 		  				</div>
 		  				<div class="col-md-4 form-group">
 		  					<label>{{ manualCheckInForm.cardid.label }}: </label><br>
